# vscode-chialisp-lsp

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  datefix.py  eslint.config.mjs  install-clvm_tools_rs.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
.github/actions/: setJobEnv.sh
.github/workflows/: dependency-review.yml  nightly-dev.yml  publish.yml  test.yml  wasm-test.yml
debug/: package-lock.json  package.json  webpack.config.js
debug/src/: gdb_runner.js  runner.js  stdin_reader.js
debug/test/: stdin_reader.test.js
resources/tests/prog/: program2.clsp
runner/: Makefile  package-lock.json  package.json  webpack.config.cjs
runner/src/: index.js  runner.js  stdin_reader.js
runner/test/: test.js
schema/: chialisp_properties.json
scripts/arm-gdb/: gdb_debug_launcher.js  gdb_stub_service.js
src/: armGdbDebug.ts  constants.ts  dbg.ts  extension.ts  gdb.ts  logger.ts  lsp.ts  utils.ts
src/test/suite/: index.ts
syntaxes/: chialisp.tmGrammar.json
test/: Dockerfile  classic-arg-decode.clsp  classic-arg-decode.sym  collatz.cl  fact.clsp  fact.clvm  fact.hex  fact.sym  launch.json  module.clsp  package-lock.json  package.json  run-server.sh  test.sh
test/config/code-server/: config.yaml
test/include/: fact.clinc  test-inc.clsp
test/test/: test.js
wasm/: Cargo.toml  README.md
wasm/resources/: gdb.sh  gdb_print_sexp.py
wasm/resources/tests/: breaking_message_list_1.txt  t1.cl  test-module1.clsp  wrong_not_found_error.txt
wasm/resources/tests/std/: append.clinc
wasm/src/: api.rs  arm_gdb.rs  interfaces.rs  jsinterface.rs  mod.rs
wasm/src/dbg/: compopts.rs  handler.rs  mod.rs  obj.rs  server.rs  source.rs  types.rs
wasm/src/lsp/: completion.rs  compopts.rs  handler.rs  mod.rs  parse.rs  patch.rs  reparse.rs  resolve.rs  semtok.rs  types.rs
wasm/src/tests/: elf.rs  mod.rs  obj.rs
