[package]
name = "clvm_tools_lsp"
version = "0.1.28"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chialisp language; compiler, repl, python and wasm bindings"
homepage = "https://prozacchiwawa.github.io/clvm_tools_rs/"
readme = "README.md"
repository = "https://github.com/Chia-Network/clvm_tools_rs"
license = "MIT"
keywords = ["chia", "chialisp", "clvm"]
categories = ["command-line-utilities"]

[lib]
name = "clvm_tools_lsp"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
clvm_tools_rs = { git = "https://github.com/Chia-Network/clvm_tools_rs", rev = "03bd78c82cb7553b24afa870904caedf9bdbabad" }
clvmr = "0.1.24"
wasm-bindgen = "=0.2.83"
wasm-bindgen-test = "=0.3.25"
js-sys = "0.3.60"
serde_json = "1.0"
serde = "1.0.142"
lsp-server = "0.6.0"
lsp-types = "0.93.0"
lazy_static = "1.4.0"
regex = "1.6.0"
url = "2.3.1"
percent-encoding = "2.2.0"
indoc = "1.0"
debug_types = "1.0.0"
